修改presto查询相关实现